--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "motion": "^12.9.2",
     "nanoid": "^5.0.9",
     "next": "latest",
+    "next-intl": "^4.3.5",
     "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
     "prisma": "^6.3.0",
